refactor: Metodos devalidacion duplicados individuales